Changes in student management & examiner popup.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -878,3 +878,5 @@ prePostToneErr = prePostToneErr
 prePostTimeErr = prePostTimeErr
 preBreakTimeErr = preBreakTimeErr
 preBreakToneErr = preBreakToneErr
+
+studentId = studentId
