--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -859,3 +859,5 @@ prePostToneErr = Enter correct value for pre post end tone
 prePostTimeErr = Enter correct value for pre post end time
 preBreakTimeErr = Enter correct value for pre break end value
 preBreakToneErr = Enter correct value for pre break tone
+
+studentId = Student Id
