Solved issue of jira.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -880,3 +880,8 @@ preBreakTimeErr = preBreakTimeErr
 preBreakToneErr = preBreakToneErr
 
 studentId = studentId
+
+checklistOptionErr = checklistOptionErr
+
+note = note
+noteValue = noteValue
