--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -865,3 +865,4 @@ studentId = Student Id
 checklistOptionErr = Checklist option value must be numeric
 note = Note
 noteValue = Student's CSV file being imported should have following column header: student_id, name, prename, email_id, street, city, gender. CSV must contains student_id, email and one of the name or prename column. Name of the column header must exactly same as described above, however, user can ommit non mandatory column and change the order of the column.
+exportSPPlans=Einsatzplan Simulationspatienten
