Corrected misleading button designation.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -479,8 +479,8 @@ deleteTask=Wollen Sie diese Aufgabe wirklich l\u00F6schen?
 saveOsceBlueprint=OSCE-Postenvorlage erfolgreich gespeichert.
 osceDaySuccess=OSCE Tag erfolgreich aktualisiert.
 osceSequence=OSCE Sequenz:
-scheduleEarlier = Erste Rotation um 1 Tag vorverschieben
-schedulePostpone = Letzte Rotation um 1 Tag verschieben
+scheduleEarlier = Rotation in fr\u00FChere Sequenz verschieben
+schedulePostpone = Rotation in sp\u00E4tere Sequenz verschieben
 warningRoomUnassigned = Bitte jedem Posten einen Raum zuweisen!
 
 #Sequence Sub View
