--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -479,8 +479,8 @@ deleteTask=Do you really want to delete this task?
 saveOsceBlueprint=Osce Post blueprint saved successfully.
 osceDaySuccess=Osce Day Updated successfully
 osceSequence=OSCE Sequence:
-scheduleEarlier = Prepone first rotation to previous day
-schedulePostpone = Postpone last rotation to next day
+scheduleEarlier = Shift rotation to previous sequence
+schedulePostpone = Shift rotation to next sequence
 warningRoomUnassigned = Please assign room to each station
 
 #Sequence Sub View
