--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -873,3 +873,7 @@ exportSPPlans=export SP Plans
 date=Datum
 startTime=Beginn
 endTime=Ende
+
+subject=Betreff : 
+
+saveChangesOrNot=Möchten Sie alle Änderungen in Vorlage getan zu retten?
