--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -870,3 +870,7 @@ exportSPPlans=Einsatzplan Simulationspatienten
 date=Date
 startTime=Start Time
 endTime=End Time
+
+subject=Subject : 
+
+saveChangesOrNot=Do you want to save any changes done in template?
