Revert "Corrected misleading button designation."
This reverts commit 2e6fea060b1b132c4b64ee67b5a17aa3a124db30.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -479,8 +479,8 @@ deleteTask=Wollen Sie diese Aufgabe wirklich l\u00F6schen?
 saveOsceBlueprint=OSCE-Postenvorlage erfolgreich gespeichert.
 osceDaySuccess=OSCE Tag erfolgreich aktualisiert.
 osceSequence=OSCE Sequenz:
-scheduleEarlier = Rotation in fr\u00FChere Sequenz verschieben
-schedulePostpone = Rotation in sp\u00E4tere Sequenz verschieben
+scheduleEarlier = Erste Rotation um 1 Tag vorverschieben
+schedulePostpone = Letzte Rotation um 1 Tag verschieben
 warningRoomUnassigned = Bitte jedem Posten einen Raum zuweisen!
 
 #Sequence Sub View
@@ -876,4 +876,4 @@ endTime=Ende
 
 subject=Betreff : 
 
-saveChangesOrNot=Möchten Sie alle Änderungen in Vorlage getan zu retten?
+saveChangesOrNot=Wollen Sie die \u00C4nderungen der Vorlage speichern?
