--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -877,3 +877,7 @@ endTime=Ende
 subject=Betreff : 
 
 saveChangesOrNot=Wollen Sie die \u00C4nderungen der Vorlage speichern?
+
+alreadyATemplateMsg=Er is al een sjabloon onder de opgegeven naam
+overrideOriginal=Overschrijven van de oorspronkelijke
+storeNew=Opslaan als een nieuwe sjabloon
