--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -890,3 +890,7 @@ exportSPPlans=export SP Plans
 
 subject=subject
 saveChangesOrNot=saveChangesOrNot
+
+alreadyATemplateMsg=alreadyATemplateMsg
+overrideOriginal=overrideOriginal
+storeNew=storeNew
