--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -874,3 +874,7 @@ endTime=End Time
 subject=Subject : 
 
 saveChangesOrNot=Do you want to save the changes made to the template?
+
+alreadyATemplateMsg=There is already a template under the given name
+overrideOriginal=Override the original
+storeNew=Store as a new template
