Updated the export OSCE functionality.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -672,7 +672,7 @@ exportUnprocessed = Zu exportierende Dateien
 exportError = Fehler beim Export
 exportFetchProcessedError = Fehler beim Laden der verarbeiteten Dateien
 exportFetchUnprocessedError = Fehler beim Laden der nicht verarbeiteten Dateien
-exportSuccess = Dateien erfolgreich in S3 platziert
+exportSuccess = Dateien erfolgreich in platziert
 exportProcessedExported = Alle verarbeiteten Dateien exportiert
 exportAllFilesProcessed = Alle Dateien wurden verarbeitet
 exportWarningAlreadyExported = Ausgew\u00E4hlte Dateien wurden bereits exportiert. Wollen Sie wirklich fortfahren?
@@ -881,3 +881,11 @@ saveChangesOrNot=Wollen Sie die \u00C4nderungen der Vorlage speichern?
 alreadyATemplateMsg=Er is al een sjabloon onder de opgegeven naam
 overrideOriginal=Overschrijven van de oorspronkelijke
 storeNew=Opslaan als een nieuwe sjabloon
+
+encryptionKey=Encryption key
+basePath=Basispfad
+host=Host    
+userName=Benutzername
+password=Passwort
+s3=S3
+ftp=FTP
