--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -894,3 +894,11 @@ saveChangesOrNot=saveChangesOrNot
 alreadyATemplateMsg=alreadyATemplateMsg
 overrideOriginal=overrideOriginal
 storeNew=storeNew
+
+encryptionKey=encryptionKey
+basePath=basePath
+host=host    
+userName=userName
+password=password
+s3=s3
+ftp=ftp
