--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -672,7 +672,7 @@ exportUnprocessed = Files to be exported
 exportError = Error exporting files
 exportFetchProcessedError = Error fetching processed files
 exportFetchUnprocessedError=Error in Export Files on S3
-exportSuccess = Files successfully placed in S3
+exportSuccess = Files successfully placed.
 exportProcessedExported = All processed files were exported
 exportAllFilesProcessed = All files were processed
 exportWarningAlreadyExported = Selected files are already exported, Do you want to continue?
@@ -878,3 +878,11 @@ saveChangesOrNot=Do you want to save the changes made to the template?
 alreadyATemplateMsg=There is already a template under the given name
 overrideOriginal=Override the original
 storeNew=Store as a new template
+
+encryptionKey=Encryption key
+basePath=Base path
+host=Host    
+userName=User name
+password=Password
+s3=S3
+ftp=FTP
