Bug fix of jira issue.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -890,3 +890,5 @@ password=Passwort
 s3=S3
 ftp=FTP
 sessionTimeoutError=Vanwege sessie time-out aanvraag zal herladen.
+
+longBreakWarningMsg = Warning : Once you adjust the time, you cannot able change the position of long break.
