--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -903,3 +903,5 @@ password=password
 s3=s3
 ftp=ftp
 sessionTimeoutError=Due to session timeout application will reload.
+
+longBreakWarningMsg = longBreakWarningMsg
