--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -887,3 +887,5 @@ password=Password
 s3=S3
 ftp=FTP
 sessionTimeoutError=Due to session timeout application will reload.
+
+longBreakWarningMsg = Warning : Once you adjust the time, you cannot able change the position of long break.
