--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -888,4 +888,4 @@ s3=S3
 ftp=FTP
 sessionTimeoutError=Due to session timeout application will reload.
 
-longBreakWarningMsg = Warning : Once you adjust the time, you cannot able change the position of long break.
+longBreakWarningMsg = Warning: once you change the break duration, you will not be able to shift the breaks timeslot anymore!
