Fixed umlauts in i18n translation file

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -825,7 +825,7 @@ sendToDmz = Senden auf DMZ
 
 acceptOsceDay = Akzeptieren OSCE Tag
 
-noEntries = Keine Einträge gefunden
+noEntries = Keine Eintrï¿½ge gefunden
 
 exportCsv = Exportieren CSV
 
@@ -891,4 +891,4 @@ s3=S3
 ftp=FTP
 sessionTimeoutError=Vanwege sessie time-out aanvraag zal herladen.
 
-longBreakWarningMsg = Achtung: Sobald Sie die Pausendauer ändern, können Sie die Pause nicht mehr verschieben!
+longBreakWarningMsg = Achtung: Sobald Sie die Pausendauer \u00E4ndern, k\u00F6nnen Sie die Pause nicht mehr verschieben!
