Export of checklist (issue 82) solved.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -892,3 +892,4 @@ ftp=FTP
 sessionTimeoutError=Vanwege sessie time-out aanvraag zal herladen.
 
 longBreakWarningMsg = Achtung: Sobald Sie die Pausendauer \u00E4ndern, k\u00F6nnen Sie die Pause nicht mehr verschieben!
+exportOsce=Export Osce
