--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -201,3 +201,35 @@ color_13=olive
 color_14=violett
 color_15=indigo
 color_16=schwarz
+
+#Examiner Dummy data
+EXAMINER_ID=1
+EXAMINER_SALUTATION=Dr. med.
+EXAMINER_FIRSTNAME=Erika
+EXAMINER_LASTTNAME=Mustermann
+EXAMINER_PHONE=0
+
+#Candidate Dummay data
+CANDIDATE_ID=1
+CANDIDATE_FIRSTNAME=Felix
+CANDIDATE_LASTTNAME=Muster
+CANDIDATE_EMAIL=muster@example.com
+
+#Station Dummy data
+STATION_ID=1
+ISBREAKSTATION=no
+STATION_TITLE=
+
+#Course Dummy data
+COURSE_ID=1
+COURSE_TITLE=Test-Parcours
+
+#Course rotation Dummy data
+ROTATION_ID=1
+ROTATION_COURSE_TITLE=Test-Rotation
+ROTATION_COURSE_ID=1
+
+#Rotation Stationm Dummy data
+ROTATION_STATION_ID=1
+STATION_EXAMINER_ID=1
+STATION_FIRST_CANDIDATE_ID=1
