--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -905,3 +905,4 @@ ftp=ftp
 sessionTimeoutError=Due to session timeout application will reload.
 
 longBreakWarningMsg = longBreakWarningMsg
+exportOsce=Export Osce
