--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -889,3 +889,4 @@ ftp=FTP
 sessionTimeoutError=Due to session timeout application will reload.
 
 longBreakWarningMsg = Warning: once you change the break duration, you will not be able to shift the breaks timeslot anymore!
+exportOsce=Export Osce
