Bug fix of jira issue.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -750,7 +750,7 @@ laterLunchError = Sp\u00E4tere Mittagspause nicht erlaubt!
 breakDuration=Pausendauer:
 newBreakDuration=Neue Pausendauer:
 newBreakDurationNotNull=Pausendauer darf nicht leer oder negativ sein!
-ignoreAcceptedOsceDay=Alle aktiven SPs anzeigen
+ignoreAcceptedOsceDay=Alle akzeptierten SPs anzeigen
 
 #payment
 payment = Kostenrechnung
