--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -92,6 +92,7 @@ DESC = absteigend
 #TraitTypes
 TATTOO = T\u00E4towierung
 NOT_TO_EXAMINE = Nicht untersuchen
+INAPT_ROLE = Ungeeignete Rolle
 
 #Operation
 CREATE = Neu erstellen
