--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -92,6 +92,7 @@ DESC = descending
 #TraitTypes
 TATTOO = Tattoo
 NOT_TO_EXAMINE = Do not examine
+INAPT_ROLE = Inappropriate role
 
 #Operation
 CREATE = Create new
