--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -750,7 +750,7 @@ laterLunchError =Later lunch break not allowed!
 breakDuration=Break duration:
 newBreakDuration=New break duration:
 newBreakDurationNotNull=Break duration cannot be empty or negative!
-ignoreAcceptedOsceDay=Show all active SPs
+ignoreAcceptedOsceDay=View all accepted SPs
 
 #payment
 payment = Cost accounting
