OSCE creation and generation changes.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -893,3 +893,6 @@ sessionTimeoutError=Vanwege sessie time-out aanvraag zal herladen.
 
 longBreakWarningMsg = Achtung: Sobald Sie die Pausendauer \u00E4ndern, k\u00F6nnen Sie die Pause nicht mehr verschieben!
 exportOsce=Export Osce
+
+lessStudentMsg = Due to the less student then timeslot structural change are require. Please select below checkbox to allow structure change.
+requireOsceChange = Require osce change
