--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -906,3 +906,6 @@ sessionTimeoutError=Due to session timeout application will reload.
 
 longBreakWarningMsg = longBreakWarningMsg
 exportOsce=Export Osce
+
+lessStudentMsg = lessStudentMsg
+requireOsceChange = requireOsceChange
