--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -890,3 +890,6 @@ sessionTimeoutError=Due to session timeout application will reload.
 
 longBreakWarningMsg = Warning: once you change the break duration, you will not be able to shift the breaks timeslot anymore!
 exportOsce=Export Osce
+
+lessStudentMsg = Due to the less student then timeslot structural change are require. Please select below checkbox to allow structure change.
+requireOsceChange = Require osce change
