Pre-calculation of OSCE files

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -896,3 +896,18 @@ exportOsce=Export Osce
 
 lessStudentMsg = Due to the less student then timeslot structural change are require. Please select below checkbox to allow structure change.
 requireOsceChange = Require osce change
+
+preview = Preview
+noOfOscePost = Number of osce post
+warningNoOfOscePost = Osce post must be number and greater than 0
+osceWarinigMsg = Please enter all value of OSCE
+precalculationError = Try again because there is some error in calculation
+middleBreak = Middle break
+longBreak = Long break
+logicalBreak = Logical break
+lunchBreak = Lunch break
+oscePost = Osce post
+osceDate = Osce date
+rotation = Rotation
+parcour = Parcour
+day = Day
