OMS 113 assigned sp for half day

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -234,3 +234,4 @@ ROTATION_COURSE_ID=1
 ROTATION_STATION_ID=1
 STATION_EXAMINER_ID=1
 STATION_FIRST_CANDIDATE_ID=1
+assignPatientForHalfDay=SPs f\u00FCr halbe Tage einsetzen
