Assign SP For half day Osce wise

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -911,4 +911,4 @@ osceDate = Osce date
 rotation = Rotation
 parcour = Parcour
 day = Day
-assignPatientForHalfDay=Assign SPs for half-days
+assignPatientForHalfDay=SPs f\u00FCr halbe Tage einsetzen
