--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -906,7 +906,7 @@ sessionTimeoutError=Due to session timeout application will reload.
 
 longBreakWarningMsg = longBreakWarningMsg
 exportOsce=Export Osce
-
+assignPatientForHalfDay=SPs f\u00FCr halbe Tage einsetzen
 lessStudentMsg = lessStudentMsg
 requireOsceChange = requireOsceChange
 
