sp-portal related changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -924,3 +924,25 @@ osceDate = Osce date
 rotation = Rotation
 parcour = Parcour
 day = Day
+spsSendEditRequest=Die folgenden SPs m\u00F6chten ihre pers\u00F6nlichen Daten anpassen:
+allowUserToEditData=Wollen Sie dies erlauben?
+allowAllSps=Allen SPs erlauben
+denyAllSps=Allen SPs verbieten
+individuallyDecide=Individuell entscheiden
+allow=Erlauben
+deny=Verbieten
+decideLater=Sp\u00E4ter entscheiden
+spChangedData=Folgende SPs haben ihre pers\u00F6nlichen Daten ge\u00E4ndert:
+wantToReviewData=Wollen Sie die \u00C4nderungen jetzt \u00FCberpr\u00FCfen?
+reviewChanges=\u00C4nderungen pr\u00FCfen
+reviewLater=Sp\u00E4ter pr\u00FCfen
+changed=Ge\u00E4ndert
+individualSPEditReqMsg=Dieser SP m\u00F6chte seine pers\u00F6nlichen Daten \u00E4ndern.
+individualSPDataChangeMsg=Dieser SP hat seine pers\u00F6nlichen Daten ge\u00F6ndert
+spDataPullNotificationMsg=Dies wird die Daten in der Datenbank mit den \u00C4nderungen des Benutzers \u00FCberschreiben. Sind Sie sicher, dass Sie ohne \u00DCberpr\u00FCfung fortfahren wollen?
+acceptChanges=\u00C4nderungen akzeptieren
+discardChanges=\u00C4nderungen verwerfen
+osceSPPortalDataMismatch=Keine korrekten Daten von SP-Portal für AnamnesisChecksValue gefunden So können Sie nicht überprüfen oder ändern Daten sp.
+dataSaveFailure=System konnte Ihre ausgewählte Operation nicht ausführen versuchen Sie es erneut
+dataChange=Changed
+editRequest=Request
