--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -908,3 +908,25 @@ osceDate = Osce date
 rotation = Rotation
 parcour = Parcour
 day = Day
+spsSendEditRequest=The following SPs have requested to edit their personal data:
+allowUserToEditData=Do you want to allow them to edit their personal data?
+allowAllSps=Allow all SPs
+denyAllSps=Deny all SPs
+individuallyDecide=Individually decide
+allow=Allow
+deny=Deny
+decideLater=Decide later
+spChangedData=The following SPs have changed their personal data:
+wantToReviewData=Do you want to review their changes now?
+reviewChanges=Review changes
+reviewLater=Review later
+changed=Changed
+individualSPEditReqMsg=This SP requested to edit his personal data.
+individualSPDataChangeMsg=This SP changed his personal data
+spDataPullNotificationMsg=This will overwrite the data in the database with the changes the user made. Are you sure you want to allow this without review?
+acceptChanges=Accept changes
+discardChanges=Discard changes
+osceSPPortalDataMismatch=No correct data found from SP portal for AnamnesisChecksValue So you can not review or change data of sp.
+dataSaveFailure=system could not perform your selected operation please try again
+dataChange=Changed
+editRequest=Request
