--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -234,3 +234,33 @@ ROTATION_COURSE_ID=1
 ROTATION_STATION_ID=1
 STATION_EXAMINER_ID=1
 STATION_FIRST_CANDIDATE_ID=1
+
+#Month
+JANUARY = Januar
+FEBRUARY = Februar
+MARCH = M\u00E4rz
+APRIL = April
+MAY = Mai
+JUNE = Juni
+JULY = Juli
+AUGUST = August
+SEPTEMBER = September
+OCTOBER = Oktober
+NOVEMBER = November
+DECEMBER = Dezember
+
+#Weekdays
+MONDAY = Montag
+MON = Mo
+TUESDAY = Dienstag
+TUE = Di
+WEDNESDAY = Mittwoch
+WED = Mi
+THURSDAY = Donnerstag
+THUR = Do
+FRIDAY = Freitag
+FRI = Fr
+SATURDAY = Samstag
+SAT = Sa
+SUNDAY = Sonntag
+SUN = So
