--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -235,3 +235,32 @@ ROTATION_STATION_ID=1
 STATION_EXAMINER_ID=1
 STATION_FIRST_CANDIDATE_ID=1
 assignPatientForHalfDay=Assign SPs for half-days
+#Month
+JANUARY = January
+FEBRUARY = February
+MARCH = March
+APRIL = April
+MAY = May
+JUNE = June
+JULY = July
+AUGUST = August
+SEPTEMBER = September
+OCTOBER = October
+NOVEMBER = November
+DECEMBER = December
+
+#Weekdays
+MONDAY = Monday
+MON = Mon
+TUESDAY = Tuesday
+TUE = Tue
+WEDNESDAY = Wednesday
+WED = Wed
+THURSDAY = Thursday
+THUR = Thu
+FRIDAY = Friday
+FRI = Fri
+SATURDAY = Saturday
+SAT = Sat
+SUNDAY = Sunday
+SUN = Sun
