--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -930,3 +930,40 @@ osceSPPortalDataMismatch=No correct data found from SP portal for AnamnesisCheck
 dataSaveFailure=system could not perform your selected operation please try again
 dataChange=Changed
 editRequest=Request
+planSPTraining = Plan SP trainings
+startSurvey = Start survey
+showSuggestion = Show suggestions
+today = Today
+proposeTrainingDay=Propose training day
+proposeOsceDay=Propose OSCE day
+scheduleTraining=Schedule training
+removeTrainingDay=Remove training day
+removeOsceDay=Remove osce day
+possibleSpTraining=Possible sp training
+possibleOsceDay=Possible osce date
+proposeTrainingDays=Propose training days
+proposeOsceDays=Propose OSCE days
+block=Block
+splitBlock=Split into two blocks
+joinBlock=Join two blocks
+startSurveyConfirmation=Are you sure you want to start the survey? It is not possible to modify the survey data after the survey has been started. Please double-check that everything is correct!
+trainingDateIsAfterOsceDate=There are training dates selected that take place after the last OSCE date. Are you sure you want to continue?
+noPISFoundForSemester=There are no SPs assigned to the current semester yet. Do you want to assign all active SPs or do you want to assign them manually?
+assignAllActiveSP=Assign all active SPs
+assignSPManually=Manually assign SPs now
+noOsceOrTrainingdateProposed=Survey cannot be started because there are no training or OSCE dates proposed yet. Do you want to propose these now?
+stopSurvey=Stop survey
+spsAreNotAssignedToRole=SPs have to be assigned to roles before the OSCE Manager can generate suggestions for training dates. Please go to SP Selection to assign SPs.
+more=More...
+hideSuggestion=Hide Suggestion
+schedule=Schedule
+roleNotDefined=Before trainings can be scheduled, the roles for each station have to be defined!
+timeTo=to
+inValidTimeProvided=Invalid time provided.
+pleaseSelectRole=Please select StandardizedRole to schedule Training
+ignoreTrainingBlocks=Ignore training blocks 
+suggestedTraining=Suggested trainings
+morning=Morning
+afterNoon=Afternoon
+overrideSuggestions=Override suggestions
+scheduledTrainings=Scheduled trainings
