--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -934,3 +934,40 @@ osceSPPortalDataMismatch=Keine korrekten Daten von SP-Portal für AnamnesisChecks
 dataSaveFailure=System konnte Ihre ausgewählte Operation nicht ausführen versuchen Sie es erneut
 dataChange=Changed
 editRequest=Request
+planSPTraining = SP Trainings planen
+startSurvey = Umfrage starten
+showSuggestion = Vorschl\u00E4ge zeigen
+today = Heute
+proposeTrainingDay=Trainingstag vorschlagen
+proposeOsceDay=OSCE-Tag vorschlagen
+scheduleTraining=Training festlegen
+removeTrainingDay=Entfernen Trainingstag
+removeOsceDay=OSZE-Tag entfernen
+possibleSpTraining=Mögliche sp Ausbildung
+possibleOsceDay=Mögliche OSZE Datum
+proposeTrainingDays=Einen Trainingstage
+proposeOsceDays=Einen Tag OSZE
+block=Block
+splitBlock=In zwei Bl\u00F6cke aufteilen
+joinBlock=Bl\u00F6cke verbinden
+startSurveyConfirmation=Sind Sie sicher, dass Sie die Umfrage starten wollen? Es ist nicht mehr m\u00F6glich die eingegebenen Termine zu \u00E4ndern nachdem die Umfrage gestarted wurde. Stellen Sie bitte sicher, dass alle Angaben korrekt sind!
+trainingDateIsAfterOsceDate=Es wurden m\u00F6gliche Trainingsdaten definiert nach dem letzten OSCE Datum. Sind Sie sicher, dass Sie fortfahren wollen?
+noPISFoundForSemester=Es wurden noch keine SPs dem aktuellen Semester zugewiesen. Wollen Sie alle aktiven SPs zuweisen oder eine manuelle Zuweisung übernehmen?
+assignAllActiveSP=Alle aktiven SPs zuweisen
+assignSPManually=Manuelle Zuweisung jetzt vornehmen
+noOsceOrTrainingdateProposed=Umfrage kann nicht gestarted werden da noch keine Vorschl\u00E4ge f\u00FCr Trainingstermine und OSCEs erstellt wurden. Wollen Sie diese nun erstellen?
+stopSurvey=Umfrage beenden
+spsAreNotAssignedToRole=Den SPs m\u00FCssen Rollen zugewiesen werden bevor der OSCE Manager Vorschl\u00E4ge f\u00FCr Trainingstermine generieren kann. Bitte gehen Sie zum Menupunkt SP-Auswahl um Rollen zuzuweisen.
+more=mehr...
+hideSuggestion=Suggestion ausblenden
+schedule=Planen
+roleNotDefined=Bevor Trainings geplant werden k\u00F6nnen m\u00FCssen f\u00FCr alle OSCE-Posten Rollen definiert werden!
+timeTo=bis
+inValidTimeProvided=Ung\u00FCltige Zeit angegeben.
+pleaseSelectRole=Bitte wählen Sie StandardizedRole zu Trainingsplan
+ignoreTrainingBlocks=Ignorieren Trainingsblöcken
+suggestedTraining=Trainingsvorschl\u00E4ge
+morning=Morgen
+afterNoon=Nachmittag
+overrideSuggestions=Vorschl\u00E4ge ignorieren
+scheduledTrainings=Geplante Trainings
