--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -235,3 +235,32 @@ ROTATION_STATION_ID=1
 STATION_EXAMINER_ID=1
 STATION_FIRST_CANDIDATE_ID=1
 assignPatientForHalfDay=SPs f\u00FCr halbe Tage einsetzen
+#Month      
+JANUARY = JANUARY
+FEBRUARY = FEBRUARY
+MARCH = MARCH
+APRIL = APRIL 
+MAY = MAY
+JUNE = JUNE
+JULY = JULY
+AUGUST = AUGUST
+SEPTEMBER = SEPTEMBER
+OCTOBER = OCTOBER
+NOVEMBER = NOVEMBER
+DECEMBER = DECEMBER
+
+#Weekdays
+MONDAY = MONDAY 
+MON = MON 
+TUESDAY = TUESDAY 
+TUE = TUE 
+WEDNESDAY = WEDNESDAY 
+WED = WED
+THURSDAY = THURSDAY 
+THUR = THUR 
+FRIDAY = FRIDAY 
+FRI = FRI 
+SATURDAY = SATURDAY 
+SAT = SAT 
+SUNDAY = SUNDAY 
+SUN = SUN 
