RoleAssignment view changes.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -967,3 +967,4 @@ morning=Morning
 afterNoon=Afternoon
 overrideSuggestions=Override suggestions
 scheduledTrainings=Scheduled trainings
+hideUnavilableSps=Hide unavailable SPs
