--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -971,3 +971,4 @@ morning=Morgen
 afterNoon=Nachmittag
 overrideSuggestions=Vorschl\u00E4ge ignorieren
 scheduledTrainings=Geplante Trainings
+hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
