--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -983,3 +983,4 @@ morning=Morgen
 afterNoon=Nachmittag
 overrideSuggestions=Vorschl\u00E4ge ignorieren
 scheduledTrainings=Geplante Trainings
+hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
