OMS-127 Add "from email

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -948,3 +948,7 @@ manualOsceParcourWarning = Are you want to copy this parcour to all osce sequenc
 manualOsceConfirmation = Wollen Sie fortfahren?
 manualOsceCalculateError = Please calculate OSCE
 manualOsceCloseError = Please select role and room in each post
+
+sendCopy = Send copy
+emailFrom = Email from
+sendCopyEmailError = Enter correct value of email
