--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -960,3 +960,7 @@ manualOsceParcourWarning = manualOsceParcourWarning
 manualOsceConfirmation = manualOsceConfirmation
 manualOsceCalculateError = manualOsceCalculateError
 manualOsceCloseError = manualOsceCloseError
+
+sendCopy = sendCopy
+emailFrom = emailFrom
+sendCopyEmailError = sendCopyEmailError
