--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -944,3 +944,7 @@ manualOsceParcourWarning = Are you want to copy this parcour to all osce sequenc
 manualOsceConfirmation = Do you want to continue?
 manualOsceCalculateError = Please calculate OSCE
 manualOsceCloseError = Please select role and room in each post
+
+sendCopy = Send copy
+emailFrom = Email from
+sendCopyEmailError = Enter correct value of email
