OMS-128, OMS-129 Bug fix

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -938,7 +938,7 @@ manualOsceDeleteOsceSequence = Are you sure you want to delete this osce sequenc
 manualOsceDeleteOsceDay = Are you sure you want to delete this osce day?
 manualOsceSequenceWarning = Osce sequence may not be empty!
 osceCreationType = Osce creation type
-manualOsceHorizontally = Horizontally
+manualOsceHorizontally = Also copy horizontally
 manualOsceVertically = Vertically
 manualOsceNone = None
 manualOsceBreakPostWarning = Are you want to copy break post as :
@@ -952,3 +952,6 @@ manualOsceCloseError = Please select role and room in each post
 sendCopy = Send copy
 emailFrom = Email from
 sendCopyEmailError = Enter correct value of email
+
+manualOsceRotErro = Osce sequence require atleast one rotation
+manualOsceAssign = Assign
