--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -964,3 +964,6 @@ manualOsceCloseError = manualOsceCloseError
 sendCopy = sendCopy
 emailFrom = emailFrom
 sendCopyEmailError = sendCopyEmailError
+
+manualOsceRotErro = manualOsceRotErro
+manualOsceAssign = manualOsceAssign
