OMS-130 Bug fix and change in manual osce creation.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -955,3 +955,6 @@ sendCopyEmailError = Enter correct value of email
 
 manualOsceRotErro = Osce sequence require atleast one rotation
 manualOsceAssign = Assign
+
+partialyItemPrint = nicht / teilerf\u00FCllte Items
+allItemPrint = Alle Items
