--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -967,3 +967,6 @@ sendCopyEmailError = sendCopyEmailError
 
 manualOsceRotErro = manualOsceRotErro
 manualOsceAssign = manualOsceAssign
+
+partialyItemPrint = partialyItemPrint
+allItemPrint = allItemPrint
