--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -951,3 +951,6 @@ sendCopyEmailError = Enter correct value of email
 
 manualOsceRotErro = Osce sequence require atleast one rotation
 manualOsceAssign = Assign
+
+partialyItemPrint = failed / partly passed Items
+allItemPrint = All Items
