Changes for dual sp in osce post.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -170,6 +170,7 @@ NORMAL = Regul\u00E4rer Posten
 BREAK = Pause
 ANAMNESIS_THERAPY = Doppelposten
 PREPARATION = Vorbereitungsposten
+DUALSP = Dual SP
 
 #OSCESecurityStatus
 SIMPLE = Fakult\u00E4rer OSCE
