--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -170,6 +170,7 @@ NORMAL = NORMAL
 BREAK = BREAK
 ANAMNESIS_THERAPY = ANAMNESIS_THERAPY
 PREPARATION = PREPARATION
+DUALSP = Dual SP
 
 #OSCESecurityStatus
 SIMPLE = SIMPLE
