--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -170,6 +170,7 @@ NORMAL = Regular Station
 BREAK= Break
 ANAMNESIS_THERAPY = Double Station
 PREPARATION = Preparation Station
+DUALSP = Dual SP
 
 #OSCESecurityStatus
 SIMPLE = Regular OSCE 
