Manual osce bug fix.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -921,13 +921,13 @@ manualOsceLunchBreak = Mittagspause
 manualOsceMiddleBreak = Middle break
 manualOsceStudent = Studenten
 manualOsceSP = Simulationspatienten
-manualOsceRoom = Räume
-manualOsceUnavailable = Nicht verfügbar
-manualOsceAddDay = Tag hinzufügen
-manualOsceBreakSooner = Pause früher
-manualOsceBreakLater = Pause später
-manualOsceBreakDuration = Pausenlänge
-manualOsceAddVersion = Version hinzufügen
+manualOsceRoom = R\u00E4ume
+manualOsceUnavailable = Nicht verf\u00FCgbar
+manualOsceAddDay = Tag hinzuf\u00FCgen
+manualOsceBreakSooner = Pause fr\u00FCher
+manualOsceBreakLater = Pause sp\u00E4ter
+manualOsceBreakDuration = Pausenl\u00E4nge
+manualOsceAddVersion = Version hinzuf\u00FCgen
 manualOsceSpecialisation = Disziplin
 manualOsceRoleTopic = Fertigkeit
 manualOsceStandardizedRole = Rolle
