Bug fix in export SP and print invitation of SP.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -640,6 +640,10 @@ tplDescPost = Zugewiesener Posten
 tplDescRoom = Zugewiesener Raum
 tplDescLongBreak = Lange Pause
 tplDescLunchBreak = Mittagspause
+tplShortNameRole = [SHORT ROLE]
+tplShortNameRoleDesc = Short name of Role
+tplPostNumber = [POST NUMBER]
+tplPostNumberDesc = Sequence number of post
 
 ##################### - UI PACKAGE - ######################
 
