--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -970,3 +970,8 @@ manualOsceAssign = manualOsceAssign
 
 partialyItemPrint = partialyItemPrint
 allItemPrint = allItemPrint
+
+tplShortNameRole = [SHORT ROLE]
+tplShortNameRoleDesc = Short name of Role
+tplPostNumber = [POST NUMBER]
+tplPostNumberDesc = Sequence number of post
