--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -640,6 +640,10 @@ tplDescPost = Assigned station
 tplDescRoom = Assigned room
 tplDescLongBreak = Long break
 tplDescLunchBreak = Lunch break
+tplShortNameRole = [SHORT ROLE]
+tplShortNameRoleDesc = Short name of Role
+tplPostNumber = [POST NUMBER]
+tplPostNumberDesc = Sequence number of post 
 
 ##################### - UI PACKAGE - ######################
 
