Dual SP Role assignment bug fix.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -962,3 +962,6 @@ manualOsceAssign = Assign
 
 partialyItemPrint = nicht / teilerf\u00FCllte Items
 allItemPrint = Alle Items
+
+dualPostPatient = Patient
+dualPostSupportive = Supportive
