--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -975,3 +975,6 @@ tplShortNameRole = [SHORT ROLE]
 tplShortNameRoleDesc = Short name of Role
 tplPostNumber = [POST NUMBER]
 tplPostNumberDesc = Sequence number of post
+
+dualPostPatient = dualPostPatient
+dualPostSupportive = dualPostSupportive
