--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -958,3 +958,6 @@ manualOsceAssign = Assign
 
 partialyItemPrint = failed / partly passed Items
 allItemPrint = All Items
+
+dualPostPatient = Patient
+dualPostSupportive = Supportive
