--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1022,3 +1022,5 @@ afterNoon=Afternoon
 overrideSuggestions=Override suggestions
 scheduledTrainings=Scheduled trainings
 hideUnavilableSps=Hide unavailable SPs
+
+exportChecklistQR=Export checklist QR
