IOSCE-66 Provide functionality to generate export eOSCE and iOSCE exam file

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -175,7 +175,7 @@ clinics = Kliniken
 
 #Role
 importeosce=Pr\u00FCfungsergebnisse importieren (eOSCE)
-exportosce=Daten nach eOSCE exportieren
+exportosce= Exportieren OSCE daten
 role = Rolle
 roles = Rollen
 roleDefinitions = Rollendefinitionen
@@ -1028,3 +1028,9 @@ scheduledTrainings=Geplante Trainings
 hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
 
 exportChecklistQR=Export checklist QR
+
+downloadeOSCE = Download eOSCE
+downloadiOSCE = Download iOSCE
+
+exporteOSCE = Export eOSCE
+exportiOSCE = Export iOSCE
