--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -175,7 +175,7 @@ clinics = Clinics
 
 #Role
 importeosce=Import test results (eOSCE)
-exportosce=Export data to eOSCE
+exportosce=Export OSCE data
 role = Role
 roles = Roles
 roleDefinitions = Role definitions
@@ -1024,3 +1024,10 @@ scheduledTrainings=Scheduled trainings
 hideUnavilableSps=Hide unavailable SPs
 
 exportChecklistQR=Export checklist QR
+
+
+downloadeOSCE = Download eOSCE
+downloadiOSCE = Download iOSCE
+
+exporteOSCE = Export eOSCE
+exportiOSCE = Export iOSCE
