--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1040,3 +1040,9 @@ overrideSuggestions=Vorschl\u00E4ge ignorieren
 scheduledTrainings=Geplante Trainings
 hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
 exportChecklistQR=Export checklist QR
+
+downloadeOSCE = downloadeOSCE
+downloadiOSCE = downloadiOSCE
+
+exporteOSCE = exporteOSCE
+exportiOSCE = exportiOSCE
